syntax = "proto3";

option csharp_namespace = "Contracts.Protos";

service OrderService {
  rpc GetOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string order_id = 1;
}

message OrderResponse {
  string order_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double price = 4;
}
